# bookai

./: .coverage  .gitignore  Dockerfile  MANIFEST.in  Procfile  README.md  aiprd.md  alembic.ini  docker-entrypoint.sh  prd.md  pyproject.toml  railway.toml  requirements.txt  setup.py  test_affiliate.py  test_affiliate_simple.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_rename_book_llm_columns.py  003_add_publication_year.py  7949be753eef_add_cover_image_open_library_url.py
app/: main.py
app/api/: admin.py  analytics.py  books.py  images.py  llm.py  search.py
app/core/: config.py  exceptions.py  utils.py
app/db/: database.py  models.py  schemas.py
app/services/: analytics_service.py  book_service.py  image_cache_service.py  llm_service.py  search_service.py
app/templates/: base.html  book_detail.html  index.html  search_results.html
scripts/: add_test_visits.py  bootstrap_books.py  cleanup_db.py  init_db.py  popular_books.py  populate_affiliate_links.py  show_visits.py
static/css/: styles.css
static/js/: main.js
templates/: index.html  search_results.html
tests/: conftest.py  test_api_analytics.py  test_api_books.py  test_api_llm.py  test_api_search.py  test_book_service.py  test_plan.md
